# lunr-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  snowpack.config.js
.github/workflows/: rust.yml
src/: index.rs  lib.rs  main.rs  query.rs  util.rs
www/: index.html  main.ts  search_index.json
