[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "lunr-wasm"
version = "0.1.0"
authors = ["Danny Blue <dannybluedesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
wasm-bindgen = "0.2.92"
# wee_alloc = { version = "0.4.5", optional = true}

[profile.release]
lto = true
opt-level = 's'

[features]
# default = ["wee_alloc"]
